
[TestDashboardView_Modals/remove_dismiss - 1]
TestDashboardView_Modals/remove_dismiss
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "r",
        "CurrentPage": 2,
        "PageCount": 3
      }
    },
    {
      "Type": "*views.RemoveRepoView",
      "Data": {
        "Type": "RemoveRepoView",
        "Handle": "test-ws",
        "RepoCount": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_Modals/remove_confirm - 1]
TestDashboardView_Modals/remove_confirm
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "r",
        "CurrentPage": 2,
        "PageCount": 3
      }
    },
    {
      "Type": "*views.RemoveRepoView",
      "Data": {
        "Type": "RemoveRepoView",
        "Handle": "test-ws",
        "RepoCount": 0,
        "HasError": false
      }
    }
  ]
}
---

[TestDashboardView_Modals/update_purpose_success - 1]
TestDashboardView_Modals/update_purpose_success
{
  "Views": [
    {
      "Type": "*views.DashboardView",
      "Data": {
        "Type": "DashboardView",
        "FilterMode": false,
        "FilterQuery": "",
        "SortOrder": "Created ↓",
        "ItemCount": 1,
        "SelectedIndex": 0,
        "HasError": false
      }
    },
    {
      "Type": "*views.ContextMenuView",
      "Data": {
        "Type": "ContextMenuView",
        "Handle": "test-ws",
        "Items": [
          {
            "Key": "i",
            "Label": "Inspect",
            "Desc": "View workspace details"
          },
          {
            "Key": "p",
            "Label": "Path",
            "Desc": "Copy path to clipboard"
          },
          {
            "Key": "u",
            "Label": "Update",
            "Desc": "Edit purpose"
          },
          {
            "Key": "e",
            "Label": "Exec",
            "Desc": "Run command"
          },
          {
            "Key": "h",
            "Label": "History",
            "Desc": "Execution history"
          },
          {
            "Key": "a",
            "Label": "Add",
            "Desc": "Add repository"
          },
          {
            "Key": "r",
            "Label": "Remove",
            "Desc": "Remove repository"
          },
          {
            "Key": "c",
            "Label": "Capture",
            "Desc": "Create or view captures"
          },
          {
            "Key": "D",
            "Label": "Derive",
            "Desc": "Generate context JSON"
          },
          {
            "Key": "v",
            "Label": "Validate",
            "Desc": "Check AGENTS.md"
          },
          {
            "Key": "k",
            "Label": "Health",
            "Desc": "Check workspace health"
          }
        ],
        "SelectedKey": "u",
        "CurrentPage": 1,
        "PageCount": 3
      }
    }
  ]
}
---
